# scraping_stoloto_website

./: README.md  cnfg.py  main.py  pyproject.toml  settings.py  utils.py
custom_type/: __init__.py  custom_type.py  literals.py
database/: __init__.py  database.py  models.py
migrations/: env.py
migrations/versions/: 2024_07_02_2236-9b51dd2546ff_create_table_sportlotto7x49.py  2024_07_03_2159-b18d2e200fec_create_sportlotto_6x45_and_sportlotto_.py  2024_07_22_2116-75139ad255f0_отказался_от_моделей_для_5х36_и_6х45.py
scrapper/: __init__.py  scrapper.py
